<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="729dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textQuestion3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_3" />

            <TextView
                android:id="@+id/textType10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_10" />

            <RadioGroup
                android:id="@+id/RadioType10"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButton46"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1" />

                <RadioButton
                    android:id="@+id/radioButton47"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_2" />

                <RadioButton
                    android:id="@+id/radioButton48"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_3" />

                <RadioButton
                    android:id="@+id/radioButton49"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_4" />

                <RadioButton
                    android:id="@+id/radioButton50"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_5" />
            </RadioGroup>

            <TextView
                android:id="@+id/textType11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_11" />

            <RadioGroup
                android:id="@+id/RadioType11"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButton51"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1" />

                <RadioButton
                    android:id="@+id/radioButton52"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_2" />

                <RadioButton
                    android:id="@+id/radioButton53"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_3" />

                <RadioButton
                    android:id="@+id/radioButton54"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_4" />

                <RadioButton
                    android:id="@+id/radioButton55"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_5" />
            </RadioGroup>

            <TextView
                android:id="@+id/textType12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_12" />

            <RadioGroup
                android:id="@+id/RadioType12"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButton56"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1" />

                <RadioButton
                    android:id="@+id/radioButton57"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_2" />

                <RadioButton
                    android:id="@+id/radioButton58"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_3" />

                <RadioButton
                    android:id="@+id/radioButton59"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_4" />

                <RadioButton
                    android:id="@+id/radioButton60"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_5" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button3Result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Result" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>