<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="729dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text="@string/opening_question" />

            <TextView
                android:id="@+id/textquestion1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1" />

            <TextView
                android:id="@+id/textType1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_1" />

            <RadioGroup
                android:id="@+id/RadioType1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_2" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_3" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_4" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_5" />
            </RadioGroup>

            <TextView
                android:id="@+id/textType2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_2" />

            <RadioGroup
                android:id="@+id/RadioType2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButton6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1" />

                <RadioButton
                    android:id="@+id/radioButton7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_2" />

                <RadioButton
                    android:id="@+id/radioButton8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_3" />

                <RadioButton
                    android:id="@+id/radioButton9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_4" />

                <RadioButton
                    android:id="@+id/radioButton10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_5" />
            </RadioGroup>

            <TextView
                android:id="@+id/textType3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_3" />

            <RadioGroup
                android:id="@+id/RadioType3"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButton11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1" />

                <RadioButton
                    android:id="@+id/radioButton12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_2" />

                <RadioButton
                    android:id="@+id/radioButton13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_3" />

                <RadioButton
                    android:id="@+id/radioButton14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_4" />

                <RadioButton
                    android:id="@+id/radioButton15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_5" />
            </RadioGroup>

            <TextView
                android:id="@+id/textType4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_4" />

            <RadioGroup
                android:id="@+id/RadioType4"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButton16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1" />

                <RadioButton
                    android:id="@+id/radioButton17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_2" />

                <RadioButton
                    android:id="@+id/radioButton18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_3" />

                <RadioButton
                    android:id="@+id/radioButton19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_4" />

                <RadioButton
                    android:id="@+id/radioButton20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_5" />
            </RadioGroup>

            <TextView
                android:id="@+id/textType5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_5" />

            <RadioGroup
                android:id="@+id/RadioType5"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButton21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1" />

                <RadioButton
                    android:id="@+id/radioButton22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_2" />

                <RadioButton
                    android:id="@+id/radioButton23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_3" />

                <RadioButton
                    android:id="@+id/radioButton24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_4" />

                <RadioButton
                    android:id="@+id/radioButton25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_5" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button1Next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="NEXT" />

                <Button
                    android:id="@+id/button1Exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="EXIT" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>