<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="729dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textQuestion2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_2" />

            <TextView
                android:id="@+id/textType6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_6" />

            <RadioGroup
                android:id="@+id/RadioType6"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButton26"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1" />

                <RadioButton
                    android:id="@+id/radioButton27"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_2" />

                <RadioButton
                    android:id="@+id/radioButton28"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_3" />

                <RadioButton
                    android:id="@+id/radioButton29"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_4" />

                <RadioButton
                    android:id="@+id/radioButton30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_5" />
            </RadioGroup>

            <TextView
                android:id="@+id/textType7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_7" />

            <RadioGroup
                android:id="@+id/RadioType7"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButton31"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1" />

                <RadioButton
                    android:id="@+id/radioButton32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_2" />

                <RadioButton
                    android:id="@+id/radioButton33"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_3" />

                <RadioButton
                    android:id="@+id/radioButton34"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_4" />

                <RadioButton
                    android:id="@+id/radioButton35"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_5" />
            </RadioGroup>

            <TextView
                android:id="@+id/textType8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_8" />

            <RadioGroup
                android:id="@+id/RadioType8"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButton36"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1" />

                <RadioButton
                    android:id="@+id/radioButton37"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_2" />

                <RadioButton
                    android:id="@+id/radioButton38"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_3" />

                <RadioButton
                    android:id="@+id/radioButton39"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_4" />

                <RadioButton
                    android:id="@+id/radioButton40"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_5" />
            </RadioGroup>

            <TextView
                android:id="@+id/textType9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_9" />

            <RadioGroup
                android:id="@+id/RadioType9"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButton41"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1" />

                <RadioButton
                    android:id="@+id/radioButton42"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_2" />

                <RadioButton
                    android:id="@+id/radioButton43"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_3" />

                <RadioButton
                    android:id="@+id/radioButton44"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_4" />

                <RadioButton
                    android:id="@+id/radioButton45"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_5" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button2Next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="NEXT" />

                <Button
                    android:id="@+id/button2Exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="EXIT" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>